Unzipping of files with ending .gz
Removed the bucket from the NewFileEvenet since the S3 bucket needs to be configured anyway to query
already collected PM data.

Fixed some bug.

Signed-off-by: PatrikBuhr <patrik.buhr@est.tech>
Issue-ID: NONRTRIC-773
Change-Id: Idaac044bd3578cbf97f700b70b73f9ed8ac568b1